# cerium

./: .gitignore  Cargo.toml  README.md
cerium/: Cargo.toml
cerium/data/: cat_variant.json  dimension_type.json  entity_type.json  item.json
cerium/examples/: debug_world.rs  entities.rs  entity.rs  flat_world.rs  inventory.rs  npc.rs  text.rs
cerium/src/: lib.rs  server.rs  tickable.rs
cerium/src/advancement/: mod.rs
cerium/src/auth/: mod.rs
cerium/src/entity/: entity.rs  entity_animation.rs  entity_type.rs  game_mode.rs  hand.rs  mod.rs  player.rs
cerium/src/entity/meta/: entity.rs  mod.rs
cerium/src/event/: events.rs  mod.rs
cerium/src/event/inventory/: click.rs  close.rs  mod.rs  open.rs
cerium/src/event/player/: mod.rs  player_config.rs  player_spawn.rs
cerium/src/inventory/: inventory.rs  inventory_type.rs  item.rs  material.rs  mod.rs  player_inventory.rs
cerium/src/item/: component.rs  item_stack.rs  mod.rs
cerium/src/item/component/: armor_trim.rs  consumable.rs  custom_model_data.rs  equippable.rs  food.rs  tool.rs  tooltip_display.rs  weapon.rs
cerium/src/network/: client.rs  mod.rs  reader.rs  writer.rs
cerium/src/network/listener/: config.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs
cerium/src/protocol/: chunk.rs  decode.rs  encode.rs  mod.rs  read.rs  types.rs  write.rs
cerium/src/protocol/packet/: mod.rs
cerium/src/protocol/packet/client/config/: acknowledge_finish_config.rs  client_info.rs  known_packs.rs  plugin_message.rs
cerium/src/protocol/packet/client/handshake/: handshake.rs
cerium/src/protocol/packet/client/login/: encryption_response.rs  login_acknowledged.rs  login_start.rs
cerium/src/protocol/packet/client/play/: change_recipe_book_settings.rs  chat_command.rs  chunk_batch_received.rs  click_container.rs  client_tick_end.rs  close_container.rs  confirm_teleportation.rs  interact.rs  keep_alive.rs  pick_item_from_block.rs  ping_request.rs  player_abilities.rs  player_action.rs  player_command.rs  player_input.rs  player_loaded.rs  player_movement_flags.rs  player_position.rs  player_position_and_rotation.rs  player_rotation.rs  player_session.rs  set_creative_mode_slot.rs  set_held_item.rs  swing_arm.rs  use_item_on.rs
cerium/src/protocol/packet/client/status/: ping_request.rs  status_request.rs
cerium/src/protocol/packet/server/config/: feature_flags.rs  finish_config.rs  known_packs.rs  registry_data.rs
cerium/src/protocol/packet/server/login/: encryption_request.rs  login_disconnect.rs  login_success.rs  set_compression.rs
cerium/src/protocol/packet/server/play/: acknowledge_block_change.rs  block_update.rs  chunk_batch_finished.rs  chunk_batch_start.rs  chunk_data_and_update_light.rs  close_container.rs  disconnect.rs  display_objective.rs  entity_animation.rs  entity_position.rs  entity_position_rotation.rs  entity_rotation.rs  game_event.rs  keep_alive.rs  login.rs  open_screen.rs  player_abilities.rs  player_info_remove.rs  player_info_update.rs  remove_entities.rs  set_block_destroy_stage.rs  set_center_chunk.rs  set_container_content.rs  set_container_slot.rs  set_entity_metadata.rs  set_head_rotation.rs  set_held_item.rs  set_tablist_header_footer.rs  spawn_entity.rs  sync_player_position.rs  system_chat_message.rs  unload_chunk.rs  update_objectives.rs  update_score.rs  update_teams.rs  world_event.rs
cerium/src/protocol/packet/server/status/: pong_response.rs  status_response.rs
cerium/src/registry/: biome.rs  cat_variant.rs  chicken_variant.rs  cow_variant.rs  dimension_type.rs  entity_type.rs  frog_variant.rs  mod.rs  painting_variant.rs  pig_variant.rs  wolf_sound_variant.rs  wolf_variant.rs
cerium/src/scoreboard/: mod.rs  sidebar.rs  team.rs
cerium/src/text/: color.rs  component.rs  mod.rs  style.rs
cerium/src/text/components/: keybind.rs  object.rs  score.rs  selector.rs  text.rs  translatable.rs
cerium/src/util/: direction.rs  dye_color.rs  identifier.rs  mod.rs  pose.rs  position.rs
cerium/src/world/: block.rs  block_entity.rs  chunk.rs  chunk_section.rs  heightmap.rs  mod.rs  palette.rs
crates/cerium-protocol/: Cargo.toml
crates/cerium-protocol/src/: buffer.rs  chunk.rs  decode.rs  encode.rs  lib.rs  read.rs  types.rs  write.rs
crates/cerium-protocol/src/packet/: keep_alive.rs  mod.rs
crates/cerium-protocol/src/packet/client/common/: client_plugin_message.rs
crates/cerium-protocol/src/packet/client/config/: acknowledge_finish_config.rs  client_info.rs  client_known_packs.rs  known_packs.rs  plugin_message.rs
crates/cerium-protocol/src/packet/client/handshake/: handshake.rs
crates/cerium-protocol/src/packet/client/login/: encryption_response.rs  login_acknowledged.rs  login_start.rs
crates/cerium-protocol/src/packet/client/play/: chat_command.rs  chunk_batch_received.rs  click_container.rs  client_tick_end.rs  close_container.rs  confirm_teleportation.rs  pick_item_from_block.rs  player_abilities.rs  player_action.rs  player_command.rs  player_input.rs  player_loaded.rs  player_movement_flags.rs  player_position.rs  player_position_and_rotation.rs  player_rotation.rs  player_session.rs  set_creative_mode_slot.rs  set_held_item.rs  swing_arm.rs  use_item_on.rs
crates/cerium-protocol/src/packet/client/status/: ping_request.rs  status_request.rs
crates/cerium-protocol/src/packet/server/config/: finish_config.rs  known_packs.rs  registry_data.rs  server_known_packs.rs
crates/cerium-protocol/src/packet/server/login/: encryption_request.rs  login_disconnect.rs  login_success.rs  set_compression.rs
crates/cerium-protocol/src/packet/server/play/: chunk_batch_finished.rs  chunk_batch_start.rs  chunk_data_and_update_light.rs  entity_position.rs  login.rs  (+6 more)
crates/cerium-registry/: Cargo.toml
crates/cerium-registry/assets/: cow_variant.json  damage_type.json
crates/cerium-registry/data/: item.json  painting_variant.json
crates/cerium-registry/src/: biome.rs  block.rs  generated.rs  lib.rs  material.rs  registry.rs  wolf_variant.rs
crates/cerium-world/: Cargo.toml
crates/cerium-world/src/: chunk.rs  chunk_section.rs  heightmap.rs  lib.rs  light.rs
(+125 files in other folders)
