[workspace]
members = [
    "crates/cerium-protocol",
    "crates/cerium-protocol-macros",
    "crates/cerium-registry",
    "crates/cerium-world",
    "crates/cerium-util",
    "crates/cerium-inventory",
]

resolver = "2"


[workspace.dependencies]
cerium-protocol = { path = "crates/cerium-protocol" }
cerium-protocol-macros = { path = "crates/cerium-protocol-macros" }
cerium-registry = { path = "crates/cerium-registry" }
cerium-world = { path = "crates/cerium-world" }
cerium-util = { path = "crates/cerium-util" }
cerium-inventory = { path = "crates/cerium-inventory" }

async-compression = { version = "0.4.27", default-features = false, features = ["tokio", "zlib"] }
bitflags = "2.9.1"
bytes = "1.10.1"
indexmap = { version = "2.10.0", features = ["serde"] }
paste = "1.0.15"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simdnbt = "0.8.0"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "net", "time", "sync", "io-util"], default-features = false }
ureq = { version = "3.0.12", features = ["json"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rustc-hash = "2.1.1"
convert_case = "0.8.0"


[package]
name = "cerium"
version = "0.1.0"
edition = "2024"


[dependencies]
cerium-protocol = { workspace = true }
cerium-registry = { workspace = true }
cerium-world = { workspace = true }
cerium-util = { workspace = true }
cerium-inventory = { workspace = true }

async-compression = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ureq = { workspace = true }
uuid = { workspace = true }

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Encryption
aes = "0.8.4"
cfb8 = "0.8.1"
num-bigint = "0.4.6"
rsa = "0.9.8"
rsa-der = "0.3.0"
sha1 = "0.10.6"
take_mut = "0.2.2"
futures = "0.3.31"
