[workspace]
members = [
    "cerium",
    "cerium-nbt",
]

resolver = "2"

[workspace.dependencies]
cerium-nbt = { path = "cerium-nbt" }

anyhow = "1.0"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "net", "time", "sync", "io-util"], default-features = false }
bytes = "1.10.1"
async-compression = { version = "0.4.27", default-features = false, features = ["tokio", "zlib"] }
ureq = { version = "3.0.12", features = ["json"] }
bitflags = "2.9.1"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.16"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
indexmap = { version = "2.10.0", features = ["serde"] }
rustc-hash = "2.1.1"
parking_lot = "0.12.5"

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Encryption
aes = "0.8.4"
cfb8 = "0.8.1"
futures = "0.3.31"
num-bigint = "0.4.6"
rsa = "0.9.8"
rsa-der = "0.3.0"
sha1 = "0.10.6"
take_mut = "0.2.2"

quote = "1.0.40"
syn = "2.0"
proc-macro2 = "1.0.95"
paste = "1.0.15"
convert_case = "0.8.0"

phf = { version = "0.13.1", features = ["macros"]}
