[package]
name = "cerium-registry"
version = "0.1.0"
edition = "2024"
build = "build/build.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
simdnbt = { workspace = true }
indexmap = { workspace = true }
cerium-util = { workspace = true }

[build-dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde_json = { workspace = true }
paste = { workspace = true }
indexmap = { workspace = true }
