[package]
name = "cerium-world"
version = "0.1.0"
edition = "2024"

[dependencies]
cerium-registry = { workspace = true }
cerium-util = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
simdnbt = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }